--- a/css/todo.css
+++ b/css/todo.css
@@ -3,13 +3,35 @@
   color: grey;
 }
 
-.unstyled {
-  list-style: none;
-}
-
 .body {
   color: #fff;
   text-align: center;
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
   background-color: #333;
+}
+
+.heading {
+  text-align: center;
+  padding-bottom: 12px;
+  font-size: 24px;
+}
+
+.todolist {
+  list-style: none;
+  margin: 30px 5px;
+  padding-left: 30px;
+
+}
+
+.ng-controller {
+  background: yellow;
+  width: 500px;
+  margin-top: 50px;
+  display: inline-block;
+  padding-bottom: 20px;
+  text-align: center;
+}
+
+.each-item {
+  margin: 10px;
 }
